[gd_scene load_steps=6 format=3 uid="uid://co1n1wv4bogdp"]

[ext_resource type="Script" uid="uid://caqa3wd4y5vhx" path="res://scripts/UI/victory_layer.gd" id="1_rvnuu"]
[ext_resource type="Texture2D" uid="uid://najjyh21dw74" path="res://assets/UI/star.png" id="2_6qrui"]
[ext_resource type="FontFile" uid="uid://cm7rdnhgpqs3x" path="res://assets/fonts/cascadiaCode/CascadiaCode.ttf" id="2_ixahn"]

[sub_resource type="Theme" id="Theme_e631n"]
default_font = ExtResource("2_ixahn")

[sub_resource type="LabelSettings" id="LabelSettings_elchx"]
font_size = 96

[node name="victory_layer" type="CanvasLayer"]
script = ExtResource("1_rvnuu")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_e631n")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Victory!"
label_settings = SubResource("LabelSettings_elchx")
horizontal_alignment = 1

[node name="star_container" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="star1" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/star_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6qrui")
expand_mode = 2
stretch_mode = 5

[node name="star2" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/star_container"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6qrui")
expand_mode = 2
stretch_mode = 5

[node name="star3" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/star_container"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6qrui")
expand_mode = 2
stretch_mode = 5

[node name="survived_label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Survived +1"
horizontal_alignment = 1

[node name="health_label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Full Health +1"
horizontal_alignment = 1

[node name="bank_label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Money, money, money +1"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="retry" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="quit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Quit
"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/quit" to="." method="_on_quit_pressed"]
